Fix some font sizes, padding, and spacing.

--- a/.vuepress/theme/styles/base/typography.css
+++ b/.vuepress/theme/styles/base/typography.css
@@ -8,11 +8,15 @@ html {
   }
 
   @screen lg {
-    --font-size: calc(100vw / 50);
+    --font-size: calc(100vw / 55);
   }
 
   @screen xl {
-    --font-size: calc(100vw / 65);
+    --font-size: calc(100vw / 70);
+  }
+
+  @screen 2xl {
+    --font-size: calc(100vw / 80);
   }
 
   font-size: var(--font-size);
@@ -41,4 +45,8 @@ h3 {
 
 h4 {
   @apply text-lg;
+}
+
+pre, code {
+  @apply font-mono;
 }
